<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/detailFragmentContainer">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:src="@drawable/ic_baseline_emoji_emotions_24"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintVertical_bias="0.116"
            android:contentDescription="@string/character" />

    <TextView
            android:text="@string/best_friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bestFriendName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.034"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#145565" />

    <TextView
            android:text="@string/very_intresting_infomation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestFriendName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.029"
            android:layout_marginEnd="32dp"
            android:width="200dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.875"
            android:height="150dp" />

    <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/not_very_intresting_information"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.064" />
</androidx.constraintlayout.widget.ConstraintLayout>